--- a/styles.css
+++ b/styles.css
@@ -43,3 +43,28 @@ body {
   .pipe.bottom {
     bottom: 0;
   }
+  .start-message {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 24px;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    z-index: 10;
+  }
+  .game-over-message {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 24px;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    z-index: 10;
+    display: none;
+}
