--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 body {
     margin: 0;
+    padding: 0;
+    height: 100%;
     overflow: hidden;
     background-color: #253fa7; /* blue background */
   }
@@ -8,10 +10,11 @@ body {
     background-size: cover; /* Adjusts the image to cover the entire container */
     background-repeat: no-repeat; /* Ensures the image doesn't repeat */
     background-position: center; /* Centers the image */
-    position: relative;
     width: 100%;
-    height: 100vh; /* Full viewport height */
-    overflow: hidden; /* Hide overflow */
+    height: 100vh; /* fallback for browsers that don't support custom properties */
+    height: calc(var(--vh, 1vh) * 100);
+    position: relative;
+    overflow: hidden;
   }
   .book {
     position: absolute;
@@ -43,28 +46,18 @@ body {
   .pipe.bottom {
     bottom: 0;
   }
-  .start-message {
+  .start-message, .game-over-message {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-family: 'Courier New', Courier, monospace;
-    font-size: 60px;
-    color: white;
-    text-align: center;
-    font-weight: bold;
-    z-index: 10;
-  }
-  .game-over-message {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 60px;
+    font-size: 48px;
     font-weight: bold;
     color: white;
     text-align: center;
     z-index: 10;
-    display: none;
+}
+.game-over-message {
+  display: none;
 }
